@@ -20,7 +20,7 @@ namespace XoopsModules\Modulebuilder\Common;
 trait FilesManagement
 {
     /**
-     * Function responsible for checking if a directory exists, we can also write in and create an index.html file
+     * Function responsible for checking if a directory exists, we can also write in and create an index.php file
      *
      * @param string $folder The full path of the directory to check
      *
@@ -35,7 +35,7 @@ trait FilesManagement
                     throw new \RuntimeException(\sprintf('Unable to create the %s directory', $folder));
                 }
 
-                file_put_contents($folder . '/index.html', '<script>history.go(-1);</script>');
+                file_put_contents($folder . '/index.php', "<?php\nheader('HTTP/1.0 404 Not Found');");
             }
         } catch (\Exception $e) {
             echo 'Caught exception: ', $e->getMessage(), '<br>';
