@@ -18,6 +18,7 @@
  - added constants for field elements types (goffy)
  - fixed bug in creation of block (heyula/goffy)
  - improved breadcrumb handling (goffy)
+ - replaced index.html by index.php (goffy)
 
 <h5>3.04 Final   [2020-11-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
